--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "eslint": "^2.13.1",
     "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-react": "^5.2.2",
+    "file-loader": "^5.0.2",
+    "image-webpack-loader": "^6.0.0",
     "mocha": "^2.4.5",
     "nyc": "^6.4.4",
     "webpack": "^1.13.0",
