--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "nyc": "^6.4.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "socket.io-client": "^2.3.0",
     "webpack": "^1.13.0",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^1.14.1",
