--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
+    "express": "^4.17.1",
     "react-redux": "^7.1.3",
     "react-test-renderer": "^16.12.0",
     "redux": "^4.0.4",
