--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "coverage": "NODE_ENV=test nyc --include src --all -r text -r lcov -r text --require babel-core/register mocha "
   },
   "dependencies": {
+    "dirty-chai": "^2.0.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "express": "^4.17.1",
@@ -36,12 +37,14 @@
     "babel-watch": "^2.0.2",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
+    "chai-enzyme": "^1.0.0-beta.1",
     "chai-equal-jsx": "^1.0.9",
     "eslint": "^2.13.1",
     "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-react": "^5.2.2",
     "file-loader": "^5.0.2",
     "image-webpack-loader": "^6.0.0",
+    "jest": "^25.1.0",
     "mocha": "^6.2.2",
     "nyc": "^6.4.4",
     "react": "^16.12.0",
