--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "express": "^4.17.1",
+    "jest-enzyme": "^7.1.2",
     "react-redux": "^7.1.3",
     "react-test-renderer": "^16.12.0",
     "redux": "^4.0.4",
@@ -45,6 +46,8 @@
     "file-loader": "^5.0.2",
     "image-webpack-loader": "^6.0.0",
     "jest": "^25.1.0",
+    "jsdom": "16.2.0",
+    "jsdom-global": "3.0.2",
     "mocha": "^6.2.2",
     "nyc": "^6.4.4",
     "react": "^16.12.0",
