--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-eslint": "^6.1.0",
     "babel-loader": "^6.2.4",
     "babel-plugin-__coverage__": "^0.111111.1",
+    "babel-plugin-styled-components": "^1.10.7",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
