--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "client-dev": "webpack-dev-server --colors --hot --inline --host 0.0.0.0 --port 8080",
     "srv-dev": "DEBUG=tetris:* babel-watch -w src src/server/main.js",
     "srv-dist": "DEBUG=tetris:* babel src --out-dir dist",
-    "test": "mocha --require babel-core/register --reporter spec",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "coverage": "NODE_ENV=test nyc --include src --all -r text -r lcov -r text --require babel-core/register mocha "
   },
   "dependencies": {
@@ -70,5 +71,19 @@
       "react",
       "stage-0"
     ]
+  },
+  "jest": {
+    "verbose": true,
+    "collectCoverage": true,
+    "setupFilesAfterEnv": [
+      "<rootDir>/tests/setup/setupTests.js"
+    ],
+    "testPathIgnorePatterns": [
+      "<rootDir>/tests/setup/"
+    ],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/tests/__mocks__/fileMock.js",
+      "\\.(css|less)$": "<rootDir>/tests/__mocks__/styleMock.js"
+    }
   }
 }
