--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@svgr/webpack": "4.3.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
+    "@testing-library/react-hooks": "^3.2.1",
     "@testing-library/user-event": "^7.2.1",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
@@ -78,7 +79,7 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "jest",
-    "src": "nodemon src/server/index.js",
+    "srv": "nodemon src/server/index.js",
     "coverage": "jest --coverage"
   },
   "eslintConfig": {
