--- a/package.json
+++ b/package.json
@@ -63,8 +63,8 @@
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.2",
     "semver": "6.3.0",
-    "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.0",
+    "socket.io": "^2.0.3",
+    "socket.io-client": "^2.0.3",
     "style-loader": "0.23.1",
     "styled-components": "^5.0.1",
     "terser-webpack-plugin": "2.3.4",
@@ -106,7 +106,8 @@
     ],
     "collectCoverageFrom": [
       "src/**/*.{js,jsx,ts,tsx}",
-      "!src/**/*.d.ts"
+      "!src/**/*.d.ts",
+      "!src/client/index.js"
     ],
     "setupFiles": [
       "react-app-polyfill/jsdom"
